# flamePerf

./: .gitignore  CMakeLists.txt  README.md
examples/: CPUBISort.cpp  CPUBISort2.cpp  CPUSqrtAdd.cpp  DiffComp.cpp  DiffOne.cpp  DiffTwo.cpp  IOreadWrite.cpp  IOreadWrite2.cpp  MEMComp.cpp  NetTCPUDP.cpp  OffCPUSleep.cpp  SockServer.cpp  SockServer.py  deadlock.cpp  fibIter.cpp  fibRec.cpp  muchMem.cpp  multiThread.cpp  offCPU.cpp  writeLargeFile.cpp
scripts/: build.sh  install_utils.sh
src/: CLIParser.cpp  CLIParser.h  CollectPerfData.cpp  CollectPerfData.h  FlameGraphGenerator.cpp  FlameGraphGenerator.h  ProfilingManager.cpp  ProfilingManager.h  main.cpp
utils/: flamegraph_script.js  template.html
